# rust_tiny

./: Cargo.toml  project_path.md
src/: main.rs
