[package]
name = "rust_tiny"
version = "0.1.0"
edition = "2024"

[dependencies]
rustfmt = "0.10.0"

[profile.release]
strip = true # Automatically strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link time optimization
codegen-units = 1 # Maximize size reduction optimizations